# first-django-project

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
myPage/blogapp/: admin.py  models.py  urls.py  views.py
myPage/blogapp/migrations/: 0001_initial.py  0002_category.py  0003_tag.py  0004_article.py  0005_alter_article_tags.py  0006_alter_article_options_alter_author_options_and_more.py
myPage/blogapp/templates/blogapp/: article_list.html
myPage/css/: style.css
myPage/html/: index.html
myPage/locale/en/LC_MESSAGES/: django.po
myPage/locale/ru/LC_MESSAGES/: django.po
myPage/myPage/: settings.py  sitemaps.py  urls.py
myPage/myauth/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
myPage/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_options.py
myPage/myauth/templates/myauth/: index.html  login.html  profiles.html  profiles_detail.html  register.html
myPage/shopapp/: admin.py  admin_mixins.py  forms.py  middlewares.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
myPage/shopapp/fixtures/: order_fixture.json  product_fixture.json  user_fixture.json
myPage/shopapp/management/commands/: create_orders.py  (+1 more)
myPage/shopapp/migrations/: 0001_initial.py  0002_order.py  0003_remove_order_delicery_adress_order_delivery_address_and_more.py  0004_rename_delicery_adress_order_delivery_address.py  0005_product_created_by.py  0006_productimages.py  0007_rename_productimages_productimage_and_more.py  0008_alter_order_options_alter_product_options_and_more.py
(+21 files in other folders)
